--- a/merchandising.html
+++ b/merchandising.html
@@ -7967,9 +7967,7 @@
                                                                               --tl-letter-spacing: -0.01em;
                                                                               --tl-line-height: 23px;
                                                                             "
-                                                                          >
-                                                                            Manila
-                                                                          </span>
+                                                                          >Manila</span>
                                                                         </div>
                                                                         <div
                                                                           class="_goqbqk"
@@ -10332,8 +10330,7 @@
                                                                             --tl-letter-spacing: -0.02em;
                                                                             --tl-line-height: 41px;
                                                                           "
-                                                                        >
-                                                                          Questions
+                                                                        >Questions
                                                                           about&nbsp;
                                                                           hosting?
                                                                         </span>
@@ -10437,8 +10434,7 @@
                                                                               --tl-letter-spacing: -0.02em;
                                                                               --tl-line-height: 45px;
                                                                             "
-                                                                          >
-                                                                            Questions
+                                                                          >Questions
                                                                             about&nbsp;
                                                                             hosting?
                                                                           </span>
@@ -18442,9 +18438,7 @@
                                                                         --tl-letter-spacing: -0.01em;
                                                                         --tl-line-height: 26px;
                                                                       "
-                                                                    >
-                                                                      Manila
-                                                                    </span>
+                                                                    >Manila</span>
                                                                   </div>
                                                                   <div
                                                                     class="_goqbqk"
@@ -18616,9 +18610,7 @@
                                                                         --tl-letter-spacing: -0.01em;
                                                                         --tl-line-height: 30px;
                                                                       "
-                                                                    >
-                                                                      Manila
-                                                                    </span>
+                                                                    >Manila</span>
                                                                   </div>
                                                                   <div
                                                                     class="_goqbqk"
@@ -18787,9 +18779,7 @@
                                                                       --tl-letter-spacing: -0.01em;
                                                                       --tl-line-height: 39px;
                                                                     "
-                                                                  >
-                                                                    Manila
-                                                                  </span>
+                                                                  >Manila</span>
                                                                 </div>
                                                                 <div
                                                                   class="_goqbqk"
@@ -24119,16 +24109,16 @@
                                         <div
                                           class="_kzbt0"
                                           style="
-                                            --mls-sc-spt-xs: 0;
-                                            --mls-sc-spb-xs: 0px;
-                                            --mls-sc-spt-sm: 0;
-                                            --mls-sc-spb-sm: 0px;
-                                            --mls-sc-spt-md: 0;
-                                            --mls-sc-spb-md: 0px;
-                                            --mls-sc-spt-lg: 0;
-                                            --mls-sc-spb-lg: 0px;
-                                            --mls-sc-spt-xl: 0;
-                                            --mls-sc-spb-xl: 48px;
+                                          --mls-sc-spt-xs: 0;
+                                          --mls-sc-spb-xs: 0px;
+                                          --mls-sc-spt-sm: 0;
+                                          --mls-sc-spb-sm: 0px;
+                                          --mls-sc-spt-md: 0;
+                                          --mls-sc-spb-md: 0px;
+                                          --mls-sc-spt-lg: 0;
+                                          --mls-sc-spb-lg: 0px;
+                                          --mls-sc-spt-xl: 0;
+                                          --mls-sc-spb-xl: 48px;
                                           "
                                         >
                                           <div class="inspiration-container__carousel-wrapper">
@@ -24254,8 +24244,7 @@
                                                                         --tl-letter-spacing: -0.02em;
                                                                         --tl-line-height: 51px;
                                                                       "
-                                                                    >
-                                                                      Questions
+                                                                    >Questions
                                                                       about&nbsp;
                                                                       hosting?
                                                                     </span>
@@ -24355,8 +24344,7 @@
                                                                         --tl-letter-spacing: -0.02em;
                                                                         --tl-line-height: 77px;
                                                                       "
-                                                                    >
-                                                                      Questions
+                                                                    >Questions
                                                                       about&nbsp;
                                                                       hosting?
                                                                     </span>
@@ -24458,8 +24446,7 @@
                                                                       --tl-letter-spacing: -0.02em;
                                                                       --tl-line-height: 98px;
                                                                     "
-                                                                  >
-                                                                    Questions
+                                                                  >Questions
                                                                     about&nbsp;
                                                                     hosting?
                                                                   </span>
