refactor card-icon

--- a/account-settings.html
+++ b/account-settings.html
@@ -1152,7 +1152,7 @@
                                     <div class="account-container__menu-list">
                                       <a
                                         href="/account-settings/personal-info"
-                                        class="account-container__menu-list-card"
+                                        class="card-icon"
                                         ><div style="margin-bottom: 16px">
                                           <svg
                                             viewBox="0 0 32 32"
@@ -1173,10 +1173,10 @@
                                           </svg>
                                         </div>
                                         <div>
-                                          <div class="account-container__menu-card-title">
+                                          <div class="card-icon__title">
                                             Personal info
                                           </div>
-                                          <div class="account-container__menu-card-desc">
+                                          <div class="card-icon__text">
                                             Provide personal details and how we
                                             can reach you
                                           </div>
@@ -1188,7 +1188,7 @@
                                     <div class="account-container__menu-list">
                                       <a
                                         href="/account-settings/login-and-security"
-                                        class="account-container__menu-list-card"
+                                        class="card-icon"
                                         ><div style="margin-bottom: 16px">
                                           <svg
                                             viewBox="0 0 32 32"
@@ -1209,10 +1209,10 @@
                                           </svg>
                                         </div>
                                         <div>
-                                          <div class="account-container__menu-card-title">
+                                          <div class="card-icon__title">
                                             Login &amp; security
                                           </div>
-                                          <div class="account-container__menu-card-desc">
+                                          <div class="card-icon__text">
                                             Update your password and secure your
                                             account
                                           </div>
@@ -1224,7 +1224,7 @@
                                     <div class="account-container__menu-list">
                                       <a
                                         href="/account-settings/payments/payment-methods"
-                                        class="account-container__menu-list-card"
+                                        class="card-icon"
                                         ><div style="margin-bottom: 16px">
                                           <svg
                                             viewBox="0 0 32 32"
@@ -1245,10 +1245,10 @@
                                           </svg>
                                         </div>
                                         <div>
-                                          <div class="account-container__menu-card-title">
+                                          <div class="card-icon__title">
                                             Payments &amp; payouts
                                           </div>
-                                          <div class="account-container__menu-card-desc">
+                                          <div class="card-icon__text">
                                             Review payments, payouts, coupons,
                                             gift cards, and taxes
                                           </div>
@@ -1260,7 +1260,7 @@
                                     <div class="account-container__menu-list">
                                       <a
                                         href="/account-settings/notifications"
-                                        class="account-container__menu-list-card"
+                                        class="card-icon"
                                         ><div style="margin-bottom: 16px">
                                           <svg
                                             xmlns="http://www.w3.org/2000/svg"
@@ -1281,10 +1281,10 @@
                                           </svg>
                                         </div>
                                         <div>
-                                          <div class="account-container__menu-card-title">
+                                          <div class="card-icon__title">
                                             Notifications
                                           </div>
-                                          <div class="account-container__menu-card-desc">
+                                          <div class="card-icon__text">
                                             Choose notification preferences and
                                             how you want to be contacted
                                           </div>
@@ -1296,7 +1296,7 @@
                                     <div class="account-container__menu-list">
                                       <a
                                         href="/account-settings/privacy-and-sharing"
-                                        class="account-container__menu-list-card"
+                                        class="card-icon"
                                         ><div style="margin-bottom: 16px">
                                           <svg
                                             viewBox="0 0 32 32"
@@ -1317,10 +1317,10 @@
                                           </svg>
                                         </div>
                                         <div>
-                                          <div class="account-container__menu-card-title">
+                                          <div class="card-icon__title">
                                             Privacy &amp; sharing
                                           </div>
-                                          <div class="account-container__menu-card-desc">
+                                          <div class="card-icon__text">
                                             Control connected apps, what you
                                             share, and who sees it
                                           </div>
@@ -1332,7 +1332,7 @@
                                     <div class="account-container__menu-list">
                                       <a
                                         href="/account-settings/preferences"
-                                        class="account-container__menu-list-card"
+                                        class="card-icon"
                                         ><div style="margin-bottom: 16px">
                                           <svg
                                             viewBox="0 0 32 32"
@@ -1353,10 +1353,10 @@
                                           </svg>
                                         </div>
                                         <div>
-                                          <div class="account-container__menu-card-title">
+                                          <div class="card-icon__title">
                                             Global preferences
                                           </div>
-                                          <div class="account-container__menu-card-desc">
+                                          <div class="card-icon__text">
                                             Set your default language, currency,
                                             and timezone
                                           </div>
@@ -1368,7 +1368,7 @@
                                     <div class="account-container__menu-list">
                                       <a
                                         href="/account-settings/airbnb-for-work"
-                                        class="account-container__menu-list-card"
+                                        class="card-icon"
                                         data-testid="account-settings-a4w-tile"
                                         ><div style="margin-bottom: 16px">
                                           <svg
@@ -1390,10 +1390,10 @@
                                           </svg>
                                         </div>
                                         <div>
-                                          <div class="account-container__menu-card-title">
+                                          <div class="card-icon__title">
                                             Travel for work
                                           </div>
-                                          <div class="account-container__menu-card-desc">
+                                          <div class="card-icon__text">
                                             Add a work email for business trip
                                             benefits
                                           </div>
@@ -1405,7 +1405,7 @@
                                     <div class="account-container__menu-list">
                                       <a
                                         href="/account-settings/professional-hosting"
-                                        class="account-container__menu-list-card"
+                                        class="card-icon"
                                         ><div style="margin-bottom: 16px">
                                           <svg
                                             viewBox="0 0 32 32"
@@ -1426,10 +1426,10 @@
                                           </svg>
                                         </div>
                                         <div>
-                                          <div class="account-container__menu-card-title">
+                                          <div class="card-icon__title">
                                             Professional hosting tools
                                           </div>
-                                          <div class="account-container__menu-card-desc">
+                                          <div class="card-icon__text">
                                             Get professional tools if you manage
                                             several properties on Airbnb
                                           </div>
@@ -1439,7 +1439,7 @@
                                   </div>
                                   <div class="account-container__menu-list-wrapper">
                                     <div class="account-container__menu-list">
-                                      <a href="/invite?r=51" class="account-container__menu-list-card"
+                                      <a href="/invite?r=51" class="card-icon"
                                         ><div style="margin-bottom: 16px">
                                           <svg
                                             viewBox="0 0 32 32"
@@ -1460,10 +1460,10 @@
                                           </svg>
                                         </div>
                                         <div>
-                                          <div class="account-container__menu-card-title">
+                                          <div class="card-icon__title">
                                             Referral credit &amp; coupon
                                           </div>
-                                          <div class="account-container__menu-card-desc">
+                                          <div class="card-icon__text">
                                             You have ₱0 referral credits and
                                             coupon. Learn more.
                                           </div>
