--- a/places.html
+++ b/places.html
@@ -527,7 +527,7 @@
                                             Kelly
                                             <!-- -->
                                           </div>
-                                          <div class="account-container__menu-card-desc">
+                                          <div class="card-icon__text">
                                             November 8, 2016
                                           </div>
                                         </div>
@@ -605,7 +605,7 @@
                                             Ehsan
                                             <!-- -->
                                           </div>
-                                          <div class="account-container__menu-card-desc">
+                                          <div class="card-icon__text">
                                             April 25, 2022
                                           </div>
                                         </div>
@@ -692,7 +692,7 @@
                                             C-Starr Locations
                                             <!-- -->
                                           </div>
-                                          <div class="account-container__menu-card-desc">
+                                          <div class="card-icon__text">
                                             March 27, 2022
                                           </div>
                                         </div>
@@ -779,7 +779,7 @@
                                             Jill
                                             <!-- -->
                                           </div>
-                                          <div class="account-container__menu-card-desc">
+                                          <div class="card-icon__text">
                                             July 17, 2021
                                           </div>
                                         </div>
@@ -862,7 +862,7 @@
                                             Connie
                                             <!-- -->
                                           </div>
-                                          <div class="account-container__menu-card-desc">
+                                          <div class="card-icon__text">
                                             June 1, 2021
                                           </div>
                                         </div>
@@ -949,7 +949,7 @@
                                             Adrian
                                             <!-- -->
                                           </div>
-                                          <div class="account-container__menu-card-desc">
+                                          <div class="card-icon__text">
                                             January 31, 2021
                                           </div>
                                         </div>
