--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="assets/css/index.css" />
     <title>Home</title>
   </head>
   <body>
@@ -24,6 +24,6 @@
       placeholder="Quick search..."
       autofocus
     />
-    <script src="main.js" defer></script>
+    <script src="assets/js/pages/index.js" defer></script>
   </body>
 </html>
