fx bug no.13 adjsut label the position

--- a/personal-info.html
+++ b/personal-info.html
@@ -529,6 +529,46 @@
                                   </div>
                                   <form>
                                     <div style="margin-bottom: 24px">
+                                      <div class="form-floating">
+                                        <label class="form-floating__control" for="gender-input"><div class="account-container__gender-select">
+                                            <div class="spinner-chart__input-title-text">
+                                              Gender
+                                            </div>
+                                          </div>
+                                          <div class="box-border">
+                                            <select name="gender" placeholder="Select" aria-describedby="gender-input-InputField-help" class="form__select" id="gender-input">
+                                              <option value=""></option>
+                                              <option value="Male">
+                                                Male
+                                              </option>
+                                              <option value="Female">
+                                                Female
+                                              </option>
+                                              <option value="Other">
+                                                Other
+                                              </option>
+                                            </select>
+                                          </div></label>
+                                        <div class="form-floating__addon">
+                                          <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="
+                                              display: block;
+                                              fill: none;
+                                              height: 16px;
+                                              width: 16px;
+                                              stroke: currentcolor;
+                                              stroke-width: 4;
+                                              overflow: visible;
+                                            ">
+                                            <g fill="none">
+                                              <path d="m28 12-11.2928932 11.2928932c-.3905243.3905243-1.0236893.3905243-1.4142136 0l-11.2928932-11.2928932"></path>
+                                            </g>
+                                          </svg>
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </form>
+                                  <!-- <form>
+                                    <div style="margin-bottom: 24px">
                                       <div>
                                         <div class="form-floating">
                                           <label
@@ -592,7 +632,7 @@
                                         Save
                                       </button>
                                     </div>
-                                  </form>
+                                  </form> -->
                                 </div>
 
                                 <div class="border-bottom-muted">
