fx bug no.16 add media query to display text

--- a/resources.html
+++ b/resources.html
@@ -5753,12 +5753,12 @@
                         >
                           <div class="_h1mu4a">
                             <div class="_b1u80s">
-                              <div class="_1ejw71e">
+                              <div class="_1ejw71e" style="height: fit-content;">
                                 <a
                                   href="https://community.withairbnb.com"
                                   class="app-theme__navbar-left-menu-list-text-wrapper"
                                 >
-                                  <div class="_91gafw">
+                                  <div class="give-feedback" style="justify-content: flex-start !important;">
                                     <div
                                       class="account-container-mb__header-profile-wrapper"
                                     >
@@ -5768,6 +5768,7 @@
                                           style="
                                             --tl-font-size: 18px;
                                             --tl-line-height: 28px;
+                                            white-space: unset !important;
                                           "
                                         >
                                           Join conversations with hosts around
@@ -5783,6 +5784,7 @@
                                             --tl-font-size: 18px;
                                             --tl-font-weight: 600;
                                             --tl-line-height: 24px;
+                                            white-space: unset !important;
                                           "
                                         >
                                           Go to the Community&nbsp;Center
@@ -5819,12 +5821,12 @@
                                   </div>
                                 </a>
                               </div>
-                              <div class="_1ejw71e">
+                              <div class="_1ejw71e" style="height: fit-content;">
                                 <a
                                   href="/help/hosting-experiences"
                                   class="app-theme__navbar-left-menu-list-text-wrapper"
                                 >
-                                  <div class="_91gafw">
+                                  <div class="give-feedback" style="justify-content: flex-start !important;">
                                     <div
                                       class="account-container-mb__header-profile-wrapper"
                                     >
@@ -5834,6 +5836,7 @@
                                           style="
                                             --tl-font-size: 18px;
                                             --tl-line-height: 28px;
+                                            white-space: unset !important;
                                           "
                                         >
                                           Find how-to articles and get answers
@@ -5849,6 +5852,7 @@
                                             --tl-font-size: 18px;
                                             --tl-font-weight: 600;
                                             --tl-line-height: 24px;
+                                            white-space: unset !important;
                                           "
                                         >
                                           Go to the Help&nbsp;Center
