fx bug no.10 open accordationn

--- a/gift.html
+++ b/gift.html
@@ -436,36 +436,28 @@
                                 tabindex="0"
                               >
                                 <div
-                                  class="rat82ei dir dir-ltr"
+                                  class="rzhf7eq r1y3t7ro dir dir-ltr"
                                   id="faq-section-expandable-row-0-row-title"
                                 >
                                   What can gift cards be used for?
                                   <div class="i1yh4cq6 dir dir-ltr">
-                                    <svg
-                                      viewBox="0 0 32 32"
-                                      xmlns="http://www.w3.org/2000/svg"
-                                      style="
-                                        display: block;
-                                        fill: none;
-                                        height: 16px;
-                                        width: 16px;
-                                        stroke: currentColor;
-                                        stroke-width: 4;
-                                        overflow: visible;
-                                      "
-                                      aria-hidden="true"
-                                      role="presentation"
-                                      focusable="false"
-                                    >
+                                    <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;">
                                       <g fill="none">
-                                        <path
-                                          d="m28 12-11.2928932 11.2928932c-.3905243.3905243-1.0236893.3905243-1.4142136 0l-11.2928932-11.2928932"
-                                        ></path>
+                                        <path d="m4 20 11.2928932-11.29289322c.3905243-.39052429 1.0236893-.39052429 1.4142136 0l11.2928932 11.29289322"></path>
                                       </g>
+                                    </svg>
                                     </svg>
                                   </div>
                                 </div>
                               </div>
+                              <div class="_14lk9e14" id="faq-section-expandable-row-0-row-expandable-items">
+                                <div class="_1rw28r4l">
+                                  <div class="ebn7uav e1d7qei1 dir dir-ltr"><div>
+                                    Gift cards can be used for any stay, Experience, or Online Experience on Airbnb.
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
                             </div>
                             <div
                               class="dir dir-ltr"
