--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <input
       class="input-search"
       type="text"
-      placeholder="Quick search..."
       autofocus
+      required
     />
     <script src="assets/js/pages/index.js" defer></script>
   </body>
