fix bug #12 coupon dark button, rename btn-dark-block & btn-dark-small

--- a/dashboard.html
+++ b/dashboard.html
@@ -866,7 +866,7 @@
                               <div class="news-card__action-wrapper">
                                 <a
                                   href="/resources/hosting-experiences/a/create-a-video-for-your-in-person-experience-446"
-                                  class="btn-dark--small"
+                                  class="btn-dark-small"
                                   >Learn more</a
                                 ><button type="button" class="app-theme__save-btn">
                                   Close
