--- a/payment.html
+++ b/payment.html
@@ -5277,9 +5277,34 @@
                         </label>
                       </div>
                       <div class="_64pbdv">
-                        <button disabled="" type="submit" class="_148dgdpk">
+                        <button disabled="" type="submit" class="btn-dark-block">
                           Apply
                         </button>
+                      </div>
+                    </form>
+                    <form style='margin-top: 1rem'>
+                      <div class="_1jj61m9">
+                        <label class="_1yw7hpv" for="quick_pay.coupon.modal.code_input">
+                          <div class="_1m2ich98">
+                            <div class="_11hx67x">Enter a coupon code</div>
+                          </div>
+                          <div dir="ltr">
+                            <div class="_fywymp7">
+                              <input
+                                name="quick_pay.coupon.modal.code_input"
+                                class="_yrzsibu"
+                                id="quick_pay.coupon.modal.code_input"
+                                autocomplete="off"
+                                type="text"
+                                aria-describedby="quick_pay.coupon.modal.code_input_error"
+                                value="dfjsdf"
+                              />
+                            </div>
+                          </div>
+                        </label>
+                      </div>
+                      <div class="_64pbdv">
+                        <button type="submit" class="btn-dark-block">Apply</button>
                       </div>
                     </form>
                   </div>
