--- a/submission/GroupSize.html
+++ b/submission/GroupSize.html
@@ -1246,7 +1246,7 @@
                             <button
                               id="lyt-next-button"
                               type="button"
-                              class="btn-dark--small"
+                              class="btn-dark-small"
                               data-veloute="lyt-next-button"
                             >
                               Next
