--- a/submission/basic.html
+++ b/submission/basic.html
@@ -1274,7 +1274,7 @@
                               id="lyt-next-button"
                               disabled=""
                               type="button"
-                              class="btn-dark--small"
+                              class="btn-dark-small"
                               data-veloute="lyt-next-button"
                             >
                               Next
