--- a/submission/cancel.html
+++ b/submission/cancel.html
@@ -1151,7 +1151,7 @@
                             <button
                               id="lyt-next-button"
                               type="button"
-                              class="btn-dark--small"
+                              class="btn-dark-small"
                               data-veloute="lyt-next-button"
                             >
                               Next
