--- a/submission/review.html
+++ b/submission/review.html
@@ -1424,7 +1424,7 @@
                               id="lyt-next-button"
                               disabled=""
                               type="button"
-                              class="btn-dark--small"
+                              class="btn-dark-small"
                               data-veloute="lyt-next-button"
                             >
                               <span class="spinner-chart__input-currency-logo">Submit</span>
