--- a/submission/title.html
+++ b/submission/title.html
@@ -1163,7 +1163,7 @@ Lorem Ipsum is simply dummy text of the printing</textarea
                             <button
                               id="lyt-next-button"
                               type="button"
-                              class="btn-dark--small"
+                              class="btn-dark-small"
                               data-veloute="lyt-next-button"
                             >
                               Next
