--- a/submission/about.html
+++ b/submission/about.html
@@ -1263,7 +1263,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                             <button
                               id="lyt-next-button"
                               type="button"
-                              class="btn-dark--small"
+                              class="btn-dark-small"
                               data-veloute="lyt-next-button"
                             >
                               Next
