--- a/submission/exp_type.html
+++ b/submission/exp_type.html
@@ -1154,7 +1154,7 @@
                             <button
                               id="lyt-next-button"
                               type="button"
-                              class="btn-dark--small"
+                              class="btn-dark-small"
                               data-veloute="lyt-next-button"
                             >
                               Next
