--- a/submission/overview.html
+++ b/submission/overview.html
@@ -1153,7 +1153,7 @@
                             <button
                               id="lyt-next-button"
                               type="button"
-                              class="btn-dark--small"
+                              class="btn-dark-small"
                               data-veloute="lyt-next-button"
                             >
                               Get started
