--- a/submission/participation.html
+++ b/submission/participation.html
@@ -1146,7 +1146,7 @@
                             <button
                               id="lyt-next-button"
                               type="button"
-                              class="btn-dark--small"
+                              class="btn-dark-small"
                               data-veloute="lyt-next-button"
                             >
                               Next
