--- a/submission/tq.html
+++ b/submission/tq.html
@@ -1144,7 +1144,7 @@
                             <button
                               id="lyt-next-button"
                               type="button"
-                              class="btn-dark--small"
+                              class="btn-dark-small"
                               data-veloute="lyt-next-button"
                             >
                               Got it!
