--- a/submission/video.html
+++ b/submission/video.html
@@ -1261,7 +1261,7 @@
                               id="lyt-next-button"
                               disabled=""
                               type="button"
-                              class="btn-dark--small"
+                              class="btn-dark-small"
                               data-veloute="lyt-next-button"
                             >
                               Next
